--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
     />
-    <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/TearsAchly/TearsAchly.github.io/master/assets/styles/styles.css" />
+    <link rel="stylesheet" type="text/css" href="https://TearsAchly.github.io/assets/styles/styles.css" />
 
     <meta
       property="og:image"
