--- a/index.html
+++ b/index.html
@@ -328,8 +328,8 @@
     <footer>
         <P>Thank you for visiting my portfolio!</P>
     </footer>
-    <script src="https://raw.githubusercontent.com/TearsAchly/TearsAchly.github.io/master/assets/script/script.js"></script>
-    <script src="https://raw.githubusercontent.com/TearsAchly/TearsAchly.github.io/master/assets/script/slide.js"></script>
-    <script src="https://raw.githubusercontent.com/TearsAchly/TearsAchly.github.io/master/assets/script/toggle.js"></script>
+    <script src="https://TearsAchly.github.io/assets/script/script.js"></script>
+    <script src="https://TearsAchly.github.io/assets/script/slide.js"></script>
+    <script src="https://TearsAchly.github.io/assets/script/toggle.js"></script>
   </body>
 </html>
