v2 - Add short introduction

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <link rel="stylesheet"
-        href="style.css">
+    <link rel="stylesheet" href="style.css">
     <title>TearsAchly</title>
 </head>
 
@@ -29,36 +28,26 @@
 
     <section class="home" id="home">
         <div class="home-img">
-            <img src="main.jpg"
-                alt="">
+            <img src="main.jpg" alt="">
         </div>
         <div class="home-content">
             <h1>Hi, It's <span>Achlys</span></h1>
             <h3 class="typing-text">I'm a <span></span></h3>
-            <p>I am a passionate Computer and Network Engineering graduate with a strong enthusiasm for technology and a
-                keen interest in Cybersecurity. Throughout my academic journey, I have honed my skills in coding,
-                delving into various programming languages and building creative projects that offer real-world
-                solutions. I have also gained a deep understanding of computer networks, enabling me to understand how
-                systems and devices connect, communicate, and function together seamlessly.
-
-                My curiosity extends to ethical hacking, where I have learned to use technical skills to identify and
-                mitigate security vulnerabilities. I’m particularly interested in bug hunting, where I actively search
-                for and analyze vulnerabilities in applications or systems to help enhance security and resilience
-                against potential threats.
-
-                With a solid foundation in both networking and security, I am eager to continue growing my skills in the
-                cybersecurity field, contributing to building safer digital environments.</p>
-          <div class="social-icons">
-    <h3>📫 How to reach me ...</h3>
-    <a href="mailto:tearsachly@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
-    <a href="https://github.com/TearsAchly" target="_blank"><i class="fa-brands fa-github"></i></a>
-    <a href="https://www.facebook.com/TearsAchly/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-    <a href="https://wakatime.com/@TearsAchly" target="_blank" class="wakatime-icon">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256" class="icon-wakatime">
-            <path fill="currentColor" d="M128 0c70.693 0 128 57.307 128 128s-57.307 128-128 128S0 198.693 0 128S57.307 0 128 0m0 30.118c-54.06 0-97.882 43.822-97.882 97.882S73.94 225.882 128 225.882S225.882 182.06 225.882 128S182.06 30.118 128 30.118m54.372 53.96c5.405 0 9.628 4.66 9.628 10.234c0 2.23-.674 4.367-1.909 6.124l-.105.145l-43.706 62.363l-.084.115c-1.813 2.39-4.551 3.843-7.541 3.843a9.7 9.7 0 0 1-2.022-.227a9 9 0 0 1-.881-.253a11 11 0 0 1-.722-.274l-.214-.097l-.364-.179l-.186-.097l-.171-.095l-.09-.053l-.322-.2l-.217-.142l-.103-.072a9 9 0 0 1-.58-.441l-.224-.189a9 9 0 0 1-.344-.31l-.059-.057a11 11 0 0 1-.829-.913a11 11 0 0 1-.865-1.266l-.096-.173l-3.42-5.495l-3.42 5.498l-.054.097c-1.699 2.931-4.677 4.845-8.03 4.935l-.246.003c-3.413 0-6.464-1.893-8.185-4.848l-.116-.204l-28.898-42.1l-.056-.069a10.6 10.6 0 0 1-2.224-6.244l-.004-.302c0-5.573 4.224-10.234 9.628-10.234c3.361 0 6.376 1.837 8.114 4.73l.04.07l21.216 31.35l3.78-6.155l.026-.048c1.632-3.103 4.699-5.147 8.167-5.238l.243-.003c3.34 0 6.35 1.815 8.09 4.682l4.128 6.777l35.158-50.336l.043-.07c1.709-2.739 4.572-4.49 7.773-4.578z"/>
-        </svg>
-    </a>
-</div>
+            <p>I'm a Computer and Network Engineering graduate with a passion for technology and cybersecurity. I enjoy
+                coding, ethical hacking, and bug hunting to enhance digital security. Currently based in Samarinda, East
+                Kalimantan, I’m eager to contribute to safer digital environments.</p>
+            <div class="social-icons">
+                <h3>📫 How to reach me ...</h3>
+                <a href="mailto:tearsachly@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
+                <a href="https://github.com/TearsAchly" target="_blank"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.facebook.com/TearsAchly/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://wakatime.com/@TearsAchly" target="_blank" class="wakatime-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256" class="icon-wakatime">
+                        <path fill="currentColor"
+                            d="M128 0c70.693 0 128 57.307 128 128s-57.307 128-128 128S0 198.693 0 128S57.307 0 128 0m0 30.118c-54.06 0-97.882 43.822-97.882 97.882S73.94 225.882 128 225.882S225.882 182.06 225.882 128S182.06 30.118 128 30.118m54.372 53.96c5.405 0 9.628 4.66 9.628 10.234c0 2.23-.674 4.367-1.909 6.124l-.105.145l-43.706 62.363l-.084.115c-1.813 2.39-4.551 3.843-7.541 3.843a9.7 9.7 0 0 1-2.022-.227a9 9 0 0 1-.881-.253a11 11 0 0 1-.722-.274l-.214-.097l-.364-.179l-.186-.097l-.171-.095l-.09-.053l-.322-.2l-.217-.142l-.103-.072a9 9 0 0 1-.58-.441l-.224-.189a9 9 0 0 1-.344-.31l-.059-.057a11 11 0 0 1-.829-.913a11 11 0 0 1-.865-1.266l-.096-.173l-3.42-5.495l-3.42 5.498l-.054.097c-1.699 2.931-4.677 4.845-8.03 4.935l-.246.003c-3.413 0-6.464-1.893-8.185-4.848l-.116-.204l-28.898-42.1l-.056-.069a10.6 10.6 0 0 1-2.224-6.244l-.004-.302c0-5.573 4.224-10.234 9.628-10.234c3.361 0 6.376 1.837 8.114 4.73l.04.07l21.216 31.35l3.78-6.155l.026-.048c1.632-3.103 4.699-5.147 8.167-5.238l.243-.003c3.34 0 6.35 1.815 8.09 4.682l4.128 6.777l35.158-50.336l.043-.07c1.709-2.739 4.572-4.49 7.773-4.578z" />
+                    </svg>
+                </a>
+            </div>
             <a href="#" class="btn">Download CV</a>
         </div>
     </section>
@@ -66,45 +55,49 @@
     <!-- Services Section -->
     <section class="services non-active" id="services">
         <div class="services-content">
-           <div class="service-item">
-    <h3>Web Development (Full Stack)</h3>
-    <p>Creating fully functional websites and web applications using front-end and back-end technologies.</p>
-    <ul>
-        <li>Custom Website Design</li>
-        <li>Responsive Front-End Development</li>
-        <li>Back-End Integration (API, Database)</li>
-        <li>Full-Stack Web Applications</li>
-        <li>CMS Implementation (e.g., WordPress, custom CMS)</li>
-        <li>Performance Optimization</li>
-        <li>Maintenance and Support</li>
-    </ul>
-</div>
-    <div class="service-item">
-    <h3>PC & Laptop Software Services</h3>
-    <p>We offer comprehensive software services for both PCs and laptops, including installation of operating systems, drivers, and essential software. Below are the services we provide, with some services available via remote support:</p>
-    <ul>
-        <li>Install and configure operating systems (Windows, Linux, MacOS)</li>
-        <li>Install necessary drivers for hardware components (Available remotely)</li>
-        <li>Install and configure essential software applications (e.g., Microsoft Office, Antivirus) (Available remotely)</li>
-        <li>System optimization and performance tuning (Available remotely)</li>
-        <li>Backup and data restoration services (Available remotely)</li>
+            <div class="service-item">
+                <h3>Web Development (Full Stack)</h3>
+                <p>Creating fully functional websites and web applications using front-end and back-end technologies.
+                </p>
+                <ul>
+                    <li>Custom Website Design</li>
+                    <li>Responsive Front-End Development</li>
+                    <li>Back-End Integration (API, Database)</li>
+                    <li>Full-Stack Web Applications</li>
+                    <li>CMS Implementation (e.g., WordPress, custom CMS)</li>
+                    <li>Performance Optimization</li>
+                    <li>Maintenance and Support</li>
+                </ul>
+            </div>
+            <div class="service-item">
+                <h3>PC & Laptop Software Services</h3>
+                <p>We offer comprehensive software services for both PCs and laptops, including installation of
+                    operating systems, drivers, and essential software. Below are the services we provide, with some
+                    services available via remote support:</p>
+                <ul>
+                    <li>Install and configure operating systems (Windows, Linux, MacOS)</li>
+                    <li>Install necessary drivers for hardware components (Available remotely)</li>
+                    <li>Install and configure essential software applications (e.g., Microsoft Office, Antivirus)
+                        (Available remotely)</li>
+                    <li>System optimization and performance tuning (Available remotely)</li>
+                    <li>Backup and data restoration services (Available remotely)</li>
 
-    </ul>
-</div>
+                </ul>
+            </div>
 
 
             <div class="service-item">
-    <h3>Mobile Phone Software Services</h3>
-    <p>Specialized in software-related solutions for Android devices.</p>
-    <ul>
-        <li>Software Troubleshooting</li>
-        <li>Operating System Reinstallation</li>
-        <li>Phone Unlocking</li>
-        <li>Firmware Update and Flashing</li>
-        <li>Pattern or PIN Removal (Forgotten Password)</li>
-        <li>Custom ROM Installation</li>
-    </ul>
-</div>
+                <h3>Mobile Phone Software Services</h3>
+                <p>Specialized in software-related solutions for Android devices.</p>
+                <ul>
+                    <li>Software Troubleshooting</li>
+                    <li>Operating System Reinstallation</li>
+                    <li>Phone Unlocking</li>
+                    <li>Firmware Update and Flashing</li>
+                    <li>Pattern or PIN Removal (Forgotten Password)</li>
+                    <li>Custom ROM Installation</li>
+                </ul>
+            </div>
 
         </div>
     </section>
@@ -228,8 +221,8 @@
                     Lastly, I learned about AWS Networking Services, where I gained theoretical and practical knowledge
                     of various network-related services provided by AWS, enhancing my skills in cloud-based networking.
                 </p><br>
-                <a href="https://www.dicoding.com/certificates/4EXG460L1PRL"
-                    target="_blank" class="btn">see certificate</a>
+                <a href="https://www.dicoding.com/certificates/4EXG460L1PRL" target="_blank" class="btn">see
+                    certificate</a>
             </div>
             <h3>DICODING - Low Level Language</h3>
             <div class="education-item">
@@ -269,8 +262,8 @@
                     Finally, I practiced problem-solving by building simple programs involving computations,
                     conditionals, loops, arrays, and functions in the Final Project. This hands-on experience solidified
                     my foundational understanding of C programming.</p><br>
-                <a href="https://www.dicoding.com/certificates/81P2VKVQOPOY"
-                    target="_blank" class="btn">see certificate</a>
+                <a href="https://www.dicoding.com/certificates/81P2VKVQOPOY" target="_blank" class="btn">see
+                    certificate</a>
             </div>
             <div class="education-item">
                 <h3>Getting Started with Java Programming</h3>
@@ -301,8 +294,8 @@
                     real-world problems, such as calculating water temperature, identifying vowels and consonants, and
                     working with geometric shapes. This hands-on experience reinforced my understanding of Java and its
                     applications.</p><br>
-                <a href="https://www.dicoding.com/certificates/N9ZOYYG88PG5"
-                    target="_blank" class="btn">see certificate</a>
+                <a href="https://www.dicoding.com/certificates/N9ZOYYG88PG5" target="_blank" class="btn">see
+                    certificate</a>
             </div>
             <h3>DiCODING - Back-End Developer JavaScript || Front-End Web Developer</h3>
             <div class="education-item">
@@ -316,8 +309,8 @@
                     their prior IT experience. By learning cloud computing, you gain exposure to essential IT fields
                     like DevOps, Machine Learning, and Software Development, equipping you with a valuable skill set for
                     the evolving tech industry.</p><br>
-                <a href="https://www.dicoding.com/certificates/53XEOK8YYZRN"
-                    target="_blank" class="btn">see certificate</a>
+                <a href="https://www.dicoding.com/certificates/53XEOK8YYZRN" target="_blank" class="btn">see
+                    certificate</a>
             </div>
             <div class="education-item">
                 <h3>Learn JavaScript Programming Basics</h3>
@@ -333,8 +326,8 @@
                     callbacks, Promises, and async/await, and organized code with ECMAScript Modules. Finally, I learned
                     best practices for writing clean, consistent, and reliable JavaScript code.
                 </p><br>
-                <a href="https://www.dicoding.com/certificates/JLX17NMMGX72"
-                    target="_blank" class="btn">see certificate</a>
+                <a href="https://www.dicoding.com/certificates/JLX17NMMGX72" target="_blank" class="btn">see
+                    certificate</a>
             </div>
             <div class="education-item">
                 <h3>Learn Back-End Beginners with JavaScript</h3>
@@ -359,8 +352,8 @@
                     Overall, this course equipped me with practical skills in building, deploying, and testing back-end
                     services, providing a solid foundation for developing robust web applications.
                 </p><br>
-                <a href="https://www.dicoding.com/certificates/07Z600YGWZQR"
-                    target="_blank" class="btn">see certificate</a>
+                <a href="https://www.dicoding.com/certificates/07Z600YGWZQR" target="_blank" class="btn">see
+                    certificate</a>
             </div>
             <div class="education-item">
                 <h3>Architecting on AWS (Building Cloud Architecture on AWS)</h3>
@@ -380,8 +373,8 @@
                     serverless solutions with AWS Lambda and API Gateway. Finally, I learned about disaster recovery
                     planning, optimization practices, and how to monitor and maintain cloud applications effectively.
                 </p><br>
-                <a href="https://www.dicoding.com/certificates/53XEO3JO0ZRN"
-                    target="_blank" class="btn">see certificate</a>
+                <a href="https://www.dicoding.com/certificates/53XEO3JO0ZRN" target="_blank" class="btn">see
+                    certificate</a>
             </div>
             <div class="education-item">
                 <h3>Learn Back-End Fundamentals with JavaScript</h3>
@@ -406,8 +399,8 @@
                     services to enhance application performance and scalability.
 
                 </p><br>
-                <a href="https://www.dicoding.com/certificates/53XEO5LE0ZRN"
-                    target="_blank" class="btn">see certificate</a>
+                <a href="https://www.dicoding.com/certificates/53XEO5LE0ZRN" target="_blank" class="btn">see
+                    certificate</a>
             </div>
             <div class="education-item">
                 <h3>Learn Web Programming Basics</h3>
@@ -432,8 +425,8 @@
                     create responsive designs, especially for mobile devices. Finally, I applied all the learned skills
                     by working on a project, building a simple yet effective website using the techniques taught
                     throughout the course.</p><br>
-                <a href="https://www.dicoding.com/certificates/07Z60OR8MZQR"
-                    target="_blank" class="btn">see certificate</a>
+                <a href="https://www.dicoding.com/certificates/07Z60OR8MZQR" target="_blank" class="btn">see
+                    certificate</a>
             </div>
             <div class="education-item">
                 <h3>Learn to Create Front-End Web for Beginners</h3>
@@ -453,8 +446,8 @@
                     experience.
 
                 </p><br>
-                <a href="https://www.dicoding.com/certificates/MRZME2V6LPYQ"
-                    target="_blank" class="btn">see certificate</a>
+                <a href="https://www.dicoding.com/certificates/MRZME2V6LPYQ" target="_blank" class="btn">see
+                    certificate</a>
             </div>
             <div class="education-item">
                 <h3>Learn Front-End Web Development Fundamentals</h3>
@@ -481,8 +474,8 @@
                     interactivity and performance of web applications.
 
                 </p><br>
-                <a href="https://www.dicoding.com/certificates/MRZM8NE0NZYQ"
-                    target="_blank" class="btn">see certificate</a>
+                <a href="https://www.dicoding.com/certificates/MRZM8NE0NZYQ" target="_blank" class="btn">see
+                    certificate</a>
             </div>
             <h3>Cisco Networking Academy</h3>
             <div class="education-item">
