v2 - Add short introduction

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <h3 class="typing-text">I'm a <span></span></h3>
             <p>I'm a Computer and Network Engineering graduate with a passion for technology and cybersecurity. I enjoy
                 coding, ethical hacking, and bug hunting to enhance digital security. Currently based in Samarinda, East
-                Kalimantan, I’m eager to contribute to safer digital environments.</p>
+                Kalimantan.</p>
             <div class="social-icons">
                 <h3>📫 How to reach me ...</h3>
                 <a href="mailto:tearsachly@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
