--- a/index.html
+++ b/index.html
@@ -549,15 +549,21 @@
             </ul>
 
         </div>
-        <div class="experience-item">
-            <h3>Logistics & Mobile Software Support Specialist
+   <div class="experience-item">
+    <h3>Logistics & Mobile Software Support Specialist</h3>
+    <p><strong>Institution:</strong> BintangHP</p>
+    <p><strong>Duration:</strong> 10/22/2024 – 8/1/2025</p>
+    <p><strong>Description:</strong></p>
+    <ul>
+        <li>Performed administrative tasks to support logistics and mobile service operations.</li>
+        <li>Managed and processed data efficiently using Microsoft Excel.</li>
+        <li>Conducted physical inspections and verified quantities of inventory items.</li>
+        <li>Handled the packing of goods to ensure secure and proper delivery.</li>
+        <li>Provided customer service support, both in-person and through various communication channels.</li>
+        <li>Serviced and repaired smartphones, including troubleshooting and routine maintenance.</li>
+    </ul>
+</div>
 
-            </h3>
-            <p>Institution: - </p>
-            <p>Duration: 10/22/2024 – present </p>
-            <p>Description: - </p>
-
-        </div>
     </section>
 
     <footer>
