--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
   <body>
     <header>
-      <a class="logo">Achyy</a>
+      <a href="#" class="logo">
+        <i class="fa-solid fa-cube cube-float"></i>
+      </a>
       <button id="menu-toggle" class="menu-toggle">
         <i class="fa fa-bars"></i>
       </button>
@@ -23,17 +25,18 @@
         <a href="#home" class="nav-link active">Home</a>
         <a href="#services" class="nav-link">Services</a>
         <a href="#skills" class="nav-link">Skills</a>
-        <a href="#education" class="nav-link">Education</a>
-        <a href="#experience" class="nav-link">Experience</a>
+        <a href="#education" class="nav-link">Educations</a>
+        <a href="#experience" class="nav-link">Experiences</a>
       </nav>
     </header>
 
     <main id="app">
-      <section id="home" class="home"></section>
-      <section id="services" class="services non-active"></section>
-      <section id="skills" class="skills non-active"></section>
-      <section id="education" class="education non-active"></section>
-      <section id="experience" class="experience non-active"></section>
+      <section id="home" class="home active"></section>
+<section id="services" class="services"></section>
+<section id="skills" class="skills"></section>
+<section id="education" class="education"></section>
+<section id="experience" class="experience"></section>
+
     </main>
 
     <footer>
