--- a/index.html
+++ b/index.html
@@ -36,12 +36,10 @@
 <section id="skills" class="skills"></section>
 <section id="education" class="education"></section>
 <section id="experience" class="experience"></section>
-
-    </main>
-
-    <footer>
+<footer class="active">
       <p>© 2026 Achyy</p>
     </footer>
+    </main>
 
     <script src="js/loader.js"></script>
     <script src="js/nav.js"></script>
