--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <header>
       <a href="#" class="logo">
-        <i class="fa-solid fa-cube cube-float"></i>
+        <img class="logo" src="https://github.githubassets.com/assets/mona-loading-dark-7701a7b97370.gif">
       </a>
       <button id="menu-toggle" class="menu-toggle">
         <i class="fa fa-bars"></i>
