--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
       <nav>
         <a href="#home" class="nav-link active">Home</a>
+        <a href="#projects" class="nav-link">Projects</a>
         <a href="#services" class="nav-link">Services</a>
         <a href="#skills" class="nav-link">Skills</a>
         <a href="#education" class="nav-link">Educations</a>
@@ -32,16 +33,20 @@
 
     <main id="app">
       <section id="home" class="home active"></section>
+      <section id="projects" class="projects"></section>
       <section id="services" class="services"></section>
       <section id="skills" class="skills"></section>
       <section id="education" class="education"></section>
       <section id="experience" class="experience"></section>
       <footer class="active">
-        <p>© 2026 Achyy</p>
+        <p>Built slowly, with curiosity.
+© 2026 Achyy
+</p>
       </footer>
     </main>
 
     <script src="js/loader.js"></script>
+    <script src="js/app.js"></script>
     <script src="js/nav.js"></script>
     <script src="js/typing.js"></script>
   </body>
