--- a/index.html
+++ b/index.html
@@ -4,19 +4,24 @@
     <meta charset="UTF-8" />
     <title>TearsAchly</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/style/images/favicon.svg" />
 
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/style/css/style.css" />
   </head>
 
   <body>
     <header>
       <a href="#" class="logo">
-        <img class="logo" src="https://github.githubassets.com/assets/mona-loading-dark-7701a7b97370.gif">
+        <img class="logo" src="https://github.githubassets.com/assets/mona-loading-dark-7701a7b97370.gif" <button id="theme-toggle" aria-label="Toggle theme">
+  <i></i>
+</button>
       </a>
+      
+
       <button id="menu-toggle" class="menu-toggle">
         <i class="fa fa-bars"></i>
       </button>
@@ -24,17 +29,18 @@
       <nav>
         <a href="#home" class="nav-link active">Home</a>
         <a href="#projects" class="nav-link">Projects</a>
-        <a href="#services" class="nav-link">Services</a>
+        <!--<a href="#services" class="nav-link">Services</a>-->
         <a href="#skills" class="nav-link">Skills</a>
         <a href="#education" class="nav-link">Educations</a>
         <a href="#experience" class="nav-link">Experiences</a>
+        
       </nav>
     </header>
 
     <main id="app">
       <section id="home" class="home active"></section>
       <section id="projects" class="projects"></section>
-      <section id="services" class="services"></section>
+      <!--<section id="services" class="services"></section>-->
       <section id="skills" class="skills"></section>
       <section id="education" class="education"></section>
       <section id="experience" class="experience"></section>
