add some functions

--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
 
   <body>
     <header>
-      <a href="#" class="logo">
-        <img class="logo" src="https://github.githubassets.com/assets/mona-loading-dark-7701a7b97370.gif" <button id="theme-toggle" aria-label="Toggle theme">
-  <i></i>
-</button>
-      </a>
-      
+      <a href="#" class="logo theme-toggle" aria-label="Toggle theme">
+  <img
+    id="theme-toggle"
+    src="https://github.githubassets.com/assets/mona-loading-dark-7701a7b97370.gif"
+    alt="Theme Toggle"
+  />
+  <span class="theme-hint">Change theme</span>
+</a>
+
 
       <button id="menu-toggle" class="menu-toggle">
         <i class="fa fa-bars"></i>
@@ -33,7 +36,6 @@
         <a href="#skills" class="nav-link">Skills</a>
         <a href="#education" class="nav-link">Educations</a>
         <a href="#experience" class="nav-link">Experiences</a>
-        
       </nav>
     </header>
 
@@ -45,9 +47,7 @@
       <section id="education" class="education"></section>
       <section id="experience" class="experience"></section>
       <footer class="active">
-        <p>Built slowly, with curiosity.
-© 2026 Achyy
-</p>
+        <p>Built slowly, with curiosity. © 2026 Achyy</p>
       </footer>
     </main>
 
